<resources>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">다음</string>
    <string name="correct_toast">정답!</string>
    <string name="incorrect_toast">틀림!</string>
    <string name="question_oceans">태평양은 대서양보다 더 크다.</string>
    <string name="question_mideast">수에즈 운하는 홍해와 인도양을 연결한다.</string>
    <string name="question_africa">나일강은 이집트에서 시작된다.</string>
    <string name="question_americas">아마존강은 아메리카 대륙에서 가장 긴 강이다.</string>
    <string name="question_asia">바이칼 호수는 세계에서 가장 오래되고
        가장 깊은 담수호이다.</string>
    <string name="warning_text">정말로 답을 보겠습니까?</string>
    <string name="show_answer_button">정답 보기</string>
    <string name="cheat_button">커닝하기!</string>
    <string name="judgment_toast">커닝은 나쁜짓이죠.</string>


    <string name="title01">Starry Night</string>
    <string name="artist01">고흐</string>
    <string name="picture01">starry_night</string>

    <string name="title02">Still Life with Kettle</string>
    <string name="artist02">폴 세잔</string>
    <string name="picture02">still_life_with_kettle</string>

    <string name="name01">장발장</string>
    <string name="addr01">서울</string>
    <string name="tel01">010-1234-0001</string>

    <string name="name02">코제트</string>
    <string name="addr02">부산</string>
    <string name="tel02">010-1234-0002</string>


    <string name="title1">학교종 </string>
    <string name="artist1">김메리</string>
    <string name="time1">00:00:19</string>
    <string name="audio1">schoolbell</string>
    <string name="song_image1">img_schoolbell</string>
    <string name="lyrics1">
        학교종이 땡땡땡 \n 어서 모이자 \n
        선생님이 우리를 \n 기다리신다.
    </string>

    <string name="title2">코끼리아저씨</string>
    <string name="artist2">강소현/박태현</string>
    <string name="time2">00:00:16</string>
    <string name="audio2">elephant</string>
    <string name="song_image2">img_elephant</string>
    <string name="lyrics2">
    코끼리 아저씨는\n코가 손이래\n
    과자를 주면은\n코로 받지요
    </string>


    <string name="title3">산토끼</string>
    <string name="artist3">이일래</string>
    <string name="time3">00:00:16</string>
    <string name="audio3">hare</string>
    <string name="song_image3">img_hare</string>
    <string name="lyrics3">
    산토끼 토끼야\n어디를 가느냐\n
    깡총깡총 뛰면서\n어디를 가느냐
    </string>


    <string name="photo1">photo1</string>
    <string name="photo2">photo2</string>
    <string name="photo3">photo3</string>
    <string name="photo4">photo4</string>
    <string name="todo">TODO</string>


    <string name="Video">분수대</string>
    <string name="place1">예술의 전당</string>
    <string name="Videotime"> 10:00</string>

    <string name="sensor_gravity">중력</string>
    <string name="sensor_accelerometer">가속도</string>
    <string name="sensor_linear_acceleration">직선 가속도</string>
    <string name="sensor_gyroscope">자이로스코프</string>

    <string name="app_name">HuntingBird</string>
    <string name="sensor_ambient_pressure">압력</string>
    <string name="sensor_illuminance">조도</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

</resources>