<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".January18.CallActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/friend01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_list"
        android:clickable="true"
        android:onClick="call"
        android:orientation="vertical"
        android:tag="01">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_title"
            android:gravity="center"
            android:text="@string/name01"
            android:textColor="#61380B"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addr01"
            android:textColor="#22741C"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/tel01"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/friend02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_list"
        android:clickable="true"
        android:onClick="call"
        android:orientation="vertical"
        android:tag="02">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_title"
            android:gravity="center"
            android:text="@string/name02"
            android:textColor="#61380B"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addr02"
            android:textColor="#22741C"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tel02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/tel02"
            android:textSize="15sp" />
    </LinearLayout>


</LinearLayout>